[mail] Mobile: mail_activity - purpose of this commit is to fix visibility issue of schedule an activity On mobile, Notes and CRM - Link: https://www.awesomescreenshot.com/image/3632556/ea670ece84b3455f64a2dc1f32169057

--- a/addons/mail/static/src/scss/mail_activity.scss
+++ b/addons/mail/static/src/scss/mail_activity.scss
@@ -164,6 +164,12 @@
             min-width: 290px;
             padding: 0px 0px;
 
+            @include media-breakpoint-down(sm) {
+                .dropdown-header {
+                    color: $o-main-text-color;
+                }
+            }
+
             .o_activity_log_container {
                 max-height: 300px;
                 overflow-y: auto;
